--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "mysql2": "^3.6.2"
+  },
+  "scripts": {
+    "start": "node ./index.js",
+    "test": "nodemon ./index.js"
   }
 }
